# rust-oracledb

./: .gitignore  .lane-env.sh  .secret_scan_denylist.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_GOAL.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  PLAN_TO_PORT_PYTHON_ORACLEDB_THIN_TO_RUST.md  README.md  deny.toml  oracledb-4.0.1-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  plan.md  release-surfaces.toml  rust-toolchain.toml
crates/oracledb/: Cargo.toml  README.md
crates/oracledb-derive/: Cargo.toml
crates/oracledb-derive/src/: lib.rs
crates/oracledb-protocol/: Cargo.toml
crates/oracledb-protocol/benches/: borrowed_decode.rs  number_decode.rs  utf8_validate.rs
crates/oracledb-protocol/fuzz/: .gitignore  Cargo.toml  targets.toml
crates/oracledb-protocol/fuzz/corpus/dbobject_scalars/: z3fd_temporal_adt_prefix_collision  z3fd_temporal_tslzt_precision_boundary  z3fd_temporal_tstz_23ai
crates/oracledb-protocol/fuzz/corpus/query_response/: 19c-caps-profile
crates/oracledb-protocol/fuzz/dictionaries/: sql_statement_surface.dict
crates/oracledb-protocol/fuzz/fuzz_targets/: accept_payload.rs  alter_session.rs  aq_response.rs  auth_response.rs  borrowed_query_response.rs  connect_string.rs  dbobject_image.rs  dbobject_scalars.rs  dpl_response.rs  lob_responses.rs  lob_text_decoder.rs  oac_record.rs  oson_decoder.rs  packet_framing.rs  query_response.rs  scalar_codecs.rs  server_error_info.rs  sessionless_tpc.rs  sql_bind_names.rs  sql_statement_surface.rs  subscr_response.rs  typed_decode_boundary.rs  vector_decoder.rs  wallet_parsers.rs
crates/oracledb-protocol/fuzz/scripts/: check_targets_manifest.py
crates/oracledb-protocol/proptest-regressions/thin/: proptests.txt
crates/oracledb-protocol/src/: capabilities.rs  crypto.rs  dpl.rs  lib.rs  oson.rs  sql.rs  thin.rs  vector.rs  wire.rs
crates/oracledb-protocol/src/net/: cassette.rs  connectstring.rs  mod.rs
crates/oracledb-protocol/src/net/connectstring/: builders.rs  easy_connect.rs  mod.rs  tnsnames.rs
crates/oracledb-protocol/src/packet/: mod.rs
crates/oracledb-protocol/src/thin/: aq.rs  auth.rs  bind.rs  codecs.rs  connect.rs  constants.rs  dbobject.rs  errors.rs  execute.rs  fetch.rs  lob.rs  mod.rs  number.rs  proptests.rs  sessionless.rs  subscr.rs  types.rs  version_gates.rs
crates/oracledb-protocol/src/tls/: dn.rs  mod.rs  pfx.rs  sni.rs  sso.rs  wallet.rs
crates/oracledb-protocol/tests/: _numi128_decode_allocs.rs  borrowed_alloc_count.rs  codec_properties.proptest-regressions  codec_properties.rs  connect_descriptor_golden.rs  dbobject_golden.rs  dpl_golden.rs  execute_payload_alloc.rs  fault_injection.proptest-regressions  fault_injection.rs  fragmentation_invariance.proptest-regressions  fragmentation_invariance.rs  framing_harness.rs  number_decode_alloc_count.rs  number_inline_byte_identical.rs  pipeline_golden.rs  pre23ai_handshake_golden.rs  protocol_limits_properties.rs  reference_contract.rs  sessionless_golden.rs  tls_wallet.rs  tpc_golden.rs
crates/oracledb-protocol/tests/golden/: aq_bulk.txt  aq_json.txt  aq_object.txt  aq_raw.txt  capture_aq.py  capture_dbobject.py  capture_dpl.py  capture_fetch_df.py  capture_pipeline.py  capture_sessionless.py  capture_tpc.py  capture_vectors.py  dbobject_session.meta.txt  dbobject_session.txt  dpl_session.meta.txt  dpl_session.txt  fetch_df_session.meta.txt  fetch_df_session.txt  free23_accept_payload.hex  gen_oson_golden.py  oracle_23ai_all_type_attrs_tstz.txt  oson_golden.json  pipeline_session.meta.txt  pipeline_session.txt  pre23ai_handshake.meta.txt  pre23ai_resend_packet.hex  pre23ai_xe11_accept_payload.hex  pre23ai_xe18_accept_payload.hex  pre23ai_xe18_auth_phase_one_response.hex  pre23ai_xe18_auth_phase_two_response.hex  pre23ai_xe18_data_types_response.hex  pre23ai_xe18_protocol_negotiation_response.hex  sessionless_session.meta.txt  sessionless_session.txt  tpc_session.meta.txt  tpc_session.txt  vectors.json
crates/oracledb-pyshim/: Cargo.toml
crates/oracledb-pyshim/src/: aq.rs  arrow_capsule.rs  async_bridge.rs  async_conn.rs  async_cursor.rs  binds.rs  conn.rs  convert.rs  cursor.rs  dbobject.rs  errors.rs  hooks.rs  lib.rs  lob.rs  metadata.rs  pipeline.rs  pool.rs  pyutil.rs  soda.rs  subscr.rs  typehandler.rs  var.rs  vector.rs
crates/oracledb/benches/: concurrent_throughput.rs  decode_throughput.rs  single_packet_passthrough.rs  thin_driver.rs
crates/oracledb/examples/: matrix_full.rs  min_connect.rs  perf_attribution_map.rs  profile_fetch_attribution.rs  profile_select1_client_cpu.rs  smoke.rs  statement_ground_truth.rs
crates/oracledb/src/: arrow.rs  cursor_logic.rs  iam_pop.rs  lib.rs  lob_stream.rs  obs.rs  pool.rs  recovery.rs  request.rs  retry.rs  routine.rs  row_stream.rs  rows.rs  shape_cache.rs  sql_convert.rs  tls.rs  transport.rs  version_cassettes.rs
crates/oracledb/src/arrow/: builders.rs  direct_path.rs  ipc.rs  mod.rs  schema.rs
crates/oracledb/src/pool/: acquire.rs  engine.rs
crates/oracledb/src/soda/: collection.rs  cursor.rs  database.rs  document.rs  error.rs  metadata.rs  mod.rs  operation.rs  qbe.rs
crates/oracledb/tests/: access_token.rs  arrow_columnar_alloc.rs  arrow_columnar_diff.rs  arrow_golden.rs  asupersync_spike.rs  cancel_then_reuse.rs  cassette_record_replay.rs  connect_trace_secret.rs  derive_trybuild.rs  differentiator_metamorphic.rs  e2e_live.rs  from_row_derive.rs  integration_arrow.rs  integration_library.rs  live_borrowed_fetch.rs  live_connect.rs  live_connect_string.rs  live_dbms_output.rs  live_dpl_arrow.rs  live_edition.rs  live_error_classification.rs  live_lob_stream.rs  live_named_bind_timeout.rs  live_object_decode.rs  live_object_precision_scale.rs  live_owned_row_stream.rs  live_ref_cursor.rs  live_retry.rs  live_routine_inout.rs  live_soda.rs  live_statement_cache.rs  live_tpc_single_rm.rs  live_transport_failover.rs  live_typed.rs  observability.rs  pipeline_live.rs  pool_reaper_async.rs  prefetch_overlap.rs  repro_repeated_named_bind.rs  reuse_after_call_timeout.rs  (+8 more)
crates/oracledb/tests/common/: mod.rs
(+325 files in other folders)
