[workspace]
members = [
    "crates/oracledb-protocol",
    "crates/oracledb",
    "crates/oracledb-pyshim",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MuhDur/rust-oracledb"
homepage = "https://github.com/MuhDur/rust-oracledb"
description = "Pure-Rust async Oracle Database thin-mode driver."
keywords = ["oracle", "database", "driver", "async", "tns"]
categories = ["database", "asynchronous"]

[workspace.dependencies]
aes = "0.8"
# arrow-rs pinned as a single version family; the pyarrow/pyo3 features are
# deliberately NOT enabled (PyCapsule FFI is hand-rolled in the shim layer)
arrow-array = "59.0.0"
arrow-buffer = "59.0.0"
arrow-data = "59.0.0"
arrow-schema = "59.0.0"
asupersync = "0.3.4"
hex = "0.4"
md-5 = "0.10"
pbkdf2 = "0.12"
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py310", "experimental-async"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
