[workspace]
members = [
    "crates/oracledb-protocol",
    "crates/oracledb",
    "crates/oracledb-derive",
    "crates/oracledb-pyshim",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
# No `rust-version`: this driver requires NIGHTLY Rust (asupersync uses
# `#![feature(try_trait_v2)]`). See `rust-toolchain.toml`; there is no stable MSRV.
license = "MIT OR Apache-2.0"
repository = "https://github.com/MuhDur/rust-oracledb"
homepage = "https://github.com/MuhDur/rust-oracledb"
# docs.rs builds and hosts documentation automatically from the published crate;
# leaving `documentation` pointing at it is the conventional default.
documentation = "https://docs.rs/oracledb"
description = "Pure-Rust async Oracle Database thin-mode driver."
keywords = ["oracle", "database", "driver", "async", "tns"]
categories = ["database", "asynchronous"]

[workspace.dependencies]
aes = "0.8"
# TLS / TCPS (Wave 5). rustls is pure-Rust and `#![forbid(unsafe_code)]`-clean
# in our usage; versions are pinned to the copies asupersync's `tls` feature
# links so a single rustls / pki-types is in the dependency graph.
rustls = { version = "0.23.39", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1.14.1"
# Sans-I/O ASN.1 + symmetric crypto for the experimental cwallet.sso reader.
cbc = "0.1"
der = { version = "0.7", features = ["oid"] }
hmac = "0.12"
# Server-cert chain validation (name-unbound, matching python-oracledb's
# check_hostname=False) and leaf DN/SAN extraction for the Oracle DN match.
rustls-webpki = { version = "0.103", default-features = false, features = ["std", "ring"] }
x509-cert = "0.2"
# arrow-rs pinned as a single version family. The driver crate uses the plain
# (default-feature) crates for fetch/ingest. The pyshim additionally enables
# the "ffi" feature to export Arrow C Data Interface PyCapsules (the only place
# unsafe FFI is permitted; see crates/oracledb-pyshim/src/arrow_capsule.rs).
arrow-array = "59.0.0"
arrow-buffer = "59.0.0"
arrow-data = "59.0.0"
arrow-schema = "59.0.0"
# Exact pin: asupersync is the single load-bearing async-runtime dependency and
# its `tls` feature pins the rustls/ring graph, so a 0.3.x point release could
# silently re-shape the runtime. Bump deliberately, not via the caret floor.
asupersync = "=0.3.4"
hex = "0.4"
md-5 = "0.10"
pbkdf2 = "0.12"
# Property-based testing for the sans-io codecs (round-trip / metamorphic /
# boundary suites in crates/oracledb-protocol). Dev-dependency only; gated
# behind nothing — plain `cargo test`.
proptest = "1.11"
pyo3 = { version = "0.29.0", features = ["extension-module", "abi3-py310", "experimental-async"] }
# Proc-macro toolchain for the `#[derive(FromRow)]` derive in crates/oracledb-derive.
# These are build-time-only dependencies (they do not ship in the runtime binary),
# and the 2.x line is already in the workspace dependency graph transitively, so
# pinning to it adds no new compiled artifact to the default build.
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2.0"
# First-class OpenTelemetry-style observability (bead rust-oracledb-lv6). The
# `tracing` facade is OPTIONAL and feature-gated behind oracledb's `tracing`
# feature: the default build pulls in NOTHING (no tracing-core compiled in,
# zero per-round-trip overhead). `tracing-subscriber` is dev-only, used by the
# span-capture test and the docs example.
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt"] }

[workspace.lints.rust]
unsafe_code = "forbid"
# `cfg(fuzzing)` is set by cargo-fuzz when building the libFuzzer harnesses in
# crates/oracledb-protocol/fuzz/. Registering it keeps the unexpected_cfgs lint
# (and thus the `-D warnings` clippy gate) quiet for the normal workspace build.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
