[package]
name = "oracledb-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/oracledb-derive"
description = "Procedural macros for the `oracledb` driver (`#[derive(FromRow)]`)."
keywords = ["oracle", "database", "derive", "proc-macro", "fromrow"]
categories = ["database"]
# Internal derive crate; user-facing docs live on the `oracledb` crate.
readme = false

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[lints]
workspace = true
