[package]
name = "oracledb-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sans-I/O Oracle TNS/TTC protocol core for the oracledb crate."

[features]
default = []
# Enables the cwallet.sso (SSO auto-login wallet) reader. Off by default: the
# format is a proprietary Oracle container and only the AES/PBES2 branch is
# implemented; ewallet.pem is fully supported without this feature.
experimental = ["dep:cbc", "dep:der", "dep:hmac"]
# Enables the `.tns-cassette` record/replay wire format (net::cassette). Pure,
# sans-I/O framing; off by default so the standard build is byte-identical.
cassette = []

[dependencies]
aes.workspace = true
hex.workspace = true
md-5.workspace = true
pbkdf2.workspace = true
rand.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
thiserror.workspace = true
# Experimental cwallet.sso reader deps (gated by the `experimental` feature).
cbc = { workspace = true, optional = true }
der = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
x509-cert.workspace = true
pkcs8 = "0.10"
# Allocation counting for the borrowed-fetch perf test. Including it installs a
# tracking global allocator (its unsafe lives inside that crate, so our code and
# the whole workspace stay `#![forbid(unsafe_code)]`-clean). dev-dependency only:
# it never affects the shipped library or any dependent crate.
allocation-counter = "0.8"

[lints]
workspace = true
