[package]
name = "oracledb-pyshim"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PyO3 harness shim for python-oracledb thin_impl conformance tests."
publish = false

[lib]
name = "oracledb_pyshim"
crate-type = ["cdylib", "rlib"]

[dependencies]
arrow-array = { workspace = true, features = ["ffi"] }
arrow-data = { workspace = true, features = ["ffi"] }
arrow-schema = { workspace = true, features = ["ffi"] }
asupersync.workspace = true
oracledb = { path = "../oracledb", features = ["arrow", "soda"] }
pyo3.workspace = true
serde_json.workspace = true

# The workspace forbids `unsafe_code`; the pyshim relaxes it to `deny` so a
# single, audited module (src/arrow_capsule.rs) can carry `#[allow(unsafe_code)]`
# for the Arrow C Data Interface PyCapsule export (FFI is inherently unsafe).
# All clippy lints are still inherited from the workspace.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
