[package]
name = "oracledb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
# `derive` is on by default: it pulls in the `oracledb-derive` proc-macro crate
# (and, transitively, syn/quote/proc-macro2), which are BUILD-TIME-ONLY deps and
# already present in the workspace dependency graph, so the default runtime build
# gains no extra compiled artifact. Disable with `default-features = false` if you
# want a derive-free build.
default = ["derive"]
derive = ["dep:oracledb-derive"]
arrow = ["dep:arrow-array", "dep:arrow-buffer", "dep:arrow-data", "dep:arrow-schema"]
# Typed-conversion bridges for FromSql / ToSql. Each external crate sits behind
# its own feature so the default build pulls in nothing extra.
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]
serde_json = ["dep:serde_json"]
rust_decimal = ["dep:rust_decimal"]
# Thin-mode SODA (Simple Oracle Document Access). Experimental surpass feature:
# python-oracledb's thin mode has no SODA. Implemented over SQL + DBMS_SODA
# PL/SQL on the existing execute/fetch/OSON primitives. Requires serde_json for
# QBE filter parsing.
soda = ["dep:serde_json"]
# Enables the experimental cwallet.sso (SSO auto-login wallet) reader.
experimental = ["oracledb-protocol/experimental"]

[dependencies]
arrow-array = { workspace = true, optional = true }
arrow-buffer = { workspace = true, optional = true }
arrow-data = { workspace = true, optional = true }
arrow-schema = { workspace = true, optional = true }
# asupersync's `tls` feature wraps rustls; we drive its sans-io ClientConnection
# over the async TCP socket and supply our own Oracle ServerCertVerifier.
asupersync = { workspace = true, features = ["tls"] }
chrono = { version = "0.4", optional = true, default-features = false, features = ["std"] }
oracledb-derive = { path = "../oracledb-derive", version = "0.0.0", optional = true }
oracledb-protocol = { path = "../oracledb-protocol" }
rust_decimal = { version = "1", optional = true, default-features = false, features = ["std"] }
rustls.workspace = true
rustls-pki-types.workspace = true
rustls-webpki.workspace = true
serde_json = { workspace = true, optional = true }
x509-cert.workspace = true
thiserror.workspace = true
uuid = { version = "1", optional = true, default-features = false }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# TLS handshake integration test: a blocking rustls server stub + PEM loading.
rustls-pemfile.workspace = true

[[bench]]
name = "thin_driver"
harness = false

[[bench]]
name = "concurrent_throughput"
harness = false

[lints]
workspace = true
