[package]
name = "oracledb-protocol-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# An empty `[workspace]` table makes this a standalone workspace root, so the
# fuzz crate is NOT a member of the parent rust-oracledb workspace. This keeps
# the libfuzzer-sys / arbitrary fuzz dependencies out of the normal workspace
# build and lockfile (the GATE requirement: "the fuzz crate must NOT break the
# normal workspace build").
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oracledb-protocol]
path = ".."
features = ["experimental"]

# cargo-fuzz builds these with sanitizers; libFuzzer is the engine.
[[bin]]
name = "packet_framing"
path = "fuzz_targets/packet_framing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query_response"
path = "fuzz_targets/query_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oson_decoder"
path = "fuzz_targets/oson_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "vector_decoder"
path = "fuzz_targets/vector_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "scalar_codecs"
path = "fuzz_targets/scalar_codecs.rs"
test = false
doc = false
bench = false

[[bin]]
name = "server_error_info"
path = "fuzz_targets/server_error_info.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dpl_response"
path = "fuzz_targets/dpl_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "aq_response"
path = "fuzz_targets/aq_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "subscr_response"
path = "fuzz_targets/subscr_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "connect_string"
path = "fuzz_targets/connect_string.rs"
test = false
doc = false
bench = false

[[bin]]
name = "alter_session"
path = "fuzz_targets/alter_session.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_response"
path = "fuzz_targets/auth_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "accept_payload"
path = "fuzz_targets/accept_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dbobject_image"
path = "fuzz_targets/dbobject_image.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dbobject_scalars"
path = "fuzz_targets/dbobject_scalars.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lob_responses"
path = "fuzz_targets/lob_responses.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lob_text_decoder"
path = "fuzz_targets/lob_text_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sessionless_tpc"
path = "fuzz_targets/sessionless_tpc.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oac_record"
path = "fuzz_targets/oac_record.rs"
test = false
doc = false
bench = false

[[bin]]
name = "wallet_parsers"
path = "fuzz_targets/wallet_parsers.rs"
test = false
doc = false
bench = false

[[bin]]
name = "borrowed_query_response"
path = "fuzz_targets/borrowed_query_response.rs"
test = false
doc = false
bench = false

[[bin]]
name = "typed_decode_boundary"
path = "fuzz_targets/typed_decode_boundary.rs"
test = false
doc = false
bench = false

# Release profile with debug assertions on: catches arithmetic overflow panics
# (the protocol decoder must fail-closed, never panic on overflow) while keeping
# libFuzzer fast.
[profile.release]
debug = 1
debug-assertions = true
overflow-checks = true
